Moved game1666proto4Test to the right place in the directory tree.

--- a/game1666proto4/game1666proto4Test/game1666proto4Test.csproj
+++ b/game1666proto4/game1666proto4Test/game1666proto4Test.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\game1666proto4\game1666proto4\game1666proto4.csproj">
+    <ProjectReference Include="..\game1666proto4\game1666proto4.csproj">
       <Project>{4B7B8B00-5F17-4638-8A70-08B2877F6467}</Project>
       <Name>game1666proto4</Name>
     </ProjectReference>
