--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,40 +164,32 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\Entities2\EntityLoader.cs" />
-    <Compile Include="Common\Entities2\ICompositeEntity.cs" />
-    <Compile Include="Common\Entities2\IPlaceableEntity.cs" />
-    <Compile Include="Common\Entities2\IPlacementStrategy.cs" />
-    <Compile Include="Common\Entities2\IPlayingArea.cs" />
-    <Compile Include="Common\Entities2\IUpdateableEntity.cs" />
-    <Compile Include="Common\Entities2\IUserInterfaceEntity.cs" />
-    <Compile Include="Common\Entities2\PlacementStrategyBase.cs" />
-    <Compile Include="Common\Entities2\PlacementStrategyRequireFlatGround.cs" />
-    <Compile Include="GameModel2\Building.cs" />
-    <Compile Include="GameModel2\City.cs" />
-    <Compile Include="GameModel2\World.cs" />
+    <Compile Include="Common\Entities\EntityLoader.cs" />
+    <Compile Include="Common\Entities\ICompositeEntity.cs" />
+    <Compile Include="GameModel\IPlaceableEntity.cs" />
+    <Compile Include="GameModel\IPlacementStrategy.cs" />
+    <Compile Include="GameModel\IPlayingArea.cs" />
+    <Compile Include="Common\Entities\IUpdateableEntity.cs" />
+    <Compile Include="UI\IVisibleEntity.cs" />
+    <Compile Include="GameModel\PlacementStrategyBase.cs" />
+    <Compile Include="GameModel\PlacementStrategyRequireFlatGround.cs" />
+    <Compile Include="GameModel\Building.cs" />
+    <Compile Include="GameModel\City.cs" />
+    <Compile Include="GameModel\World.cs" />
     <Compile Include="GameModel\Blueprints\CityBlueprint.cs" />
     <Compile Include="GameModel\FSMs\EntityInConstructionState.cs" />
     <Compile Include="GameModel\FSMs\EntityOperatingState.cs" />
-    <Compile Include="GameModel\IPlaceableEntity.cs" />
-    <Compile Include="Common\Entities\IUpdateableEntity.cs" />
     <Compile Include="UI\GameViewState.cs" />
     <Compile Include="UI\Tools\EntityPlacementTool.cs" />
     <Compile Include="UI\Tools\ITool.cs" />
-    <Compile Include="UI\IVisibleEntity.cs" />
     <Compile Include="Common\FSMs\FiniteStateMachine.cs" />
     <Compile Include="Common\FSMs\IFSMState.cs" />
     <Compile Include="GameModel\FSMs\EntityStateID.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
     <Compile Include="GameModel\Blueprints\Blueprint.cs" />
-    <Compile Include="Common\Entities\CompositeEntity.cs" />
-    <Compile Include="Common\Entities\CompositeUpdatableEntity.cs" />
     <Compile Include="GameModel\FSMs\EntityFSM.cs" />
-    <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="GameModel\Blueprints\Footprint.cs" />
     <Compile Include="UI\Button.cs" />
-    <Compile Include="Common\Entities\Entity.cs" />
-    <Compile Include="Common\Entities\EntityLoader.cs" />
     <Compile Include="UI\CompositeVisibleEntity.cs" />
     <Compile Include="Common\Input\MouseEventManager.cs" />
     <Compile Include="Common\Maths\MathUtil.cs" />
@@ -206,17 +198,13 @@
     <Compile Include="Common\Maths\Constants.cs" />
     <Compile Include="Common\Maths\Triangle.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
-    <Compile Include="GameModel\City.cs" />
     <Compile Include="GameModel\House.cs" />
     <Compile Include="GameModel\Blueprints\HouseBlueprint.cs" />
-    <Compile Include="GameModel\Building.cs" />
-    <Compile Include="GameModel\PlayingArea.cs" />
     <Compile Include="GameModel\RoadNetwork.cs" />
     <Compile Include="GameModel\RoadSegment.cs" />
     <Compile Include="GameModel\Terrains\QuadtreeCompiler.cs" />
     <Compile Include="GameModel\Terrains\QuadtreeNode.cs" />
     <Compile Include="GameModel\Terrains\Terrain.cs" />
-    <Compile Include="GameModel\World.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
@@ -267,6 +255,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
