--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -180,6 +180,7 @@
     <Compile Include="GameModel\FSMs\EntityInConstructionState.cs" />
     <Compile Include="GameModel\FSMs\EntityOperatingState.cs" />
     <Compile Include="UI\GameViewState.cs" />
+    <Compile Include="UI\Tools\EntityDeletionTool.cs" />
     <Compile Include="UI\Tools\EntityPlacementTool.cs" />
     <Compile Include="UI\Tools\ITool.cs" />
     <Compile Include="Common\FSMs\FiniteStateMachine.cs" />
