Factored the code to determine the mouse ray into a new static class called ToolUtil.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -214,6 +214,7 @@
     <Compile Include="UI\PlayingAreaViewer.cs" />
     <Compile Include="UI\SidebarViewer.cs" />
     <Compile Include="UI\GameView.cs" />
+    <Compile Include="UI\Tools\ToolUtil.cs" />
     <Compile Include="UI\ViewHierarchy.cs" />
     <Compile Include="UI\VisibleEntity.cs" />
   </ItemGroup>
