--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,6 +164,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Communication\IMessage.cs" />
+    <Compile Include="Common\Communication\MessageRule.cs" />
+    <Compile Include="Common\Communication\MessageRuleFactory.cs" />
+    <Compile Include="Common\Communication\MessageSystem.cs" />
     <Compile Include="Common\Entities\EntityLoader.cs" />
     <Compile Include="Common\Entities\ICompositeEntity.cs" />
     <Compile Include="GameModel\IPlaceableEntity.cs" />
