Continued working on entity deletion.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -175,6 +175,7 @@
     <Compile Include="GameModel\IPlacementStrategy.cs" />
     <Compile Include="GameModel\IPlayingArea.cs" />
     <Compile Include="Common\Entities\IUpdateableEntity.cs" />
+    <Compile Include="GameModel\Messages\EntityDestructionMessage.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
     <Compile Include="GameModel\PlacementStrategyBase.cs" />
     <Compile Include="GameModel\PlacementStrategyRequireFlatGround.cs" />
