--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -170,6 +170,8 @@
     <Compile Include="Common\Communication\MessageSystem.cs" />
     <Compile Include="Common\Entities\EntityLoader.cs" />
     <Compile Include="Common\Entities\ICompositeEntity.cs" />
+    <Compile Include="Common\Matchmaking\Edge.cs" />
+    <Compile Include="Common\Matchmaking\MatchmakingGraph.cs" />
     <Compile Include="GameModel\FSMs\EntityInDestructionState.cs" />
     <Compile Include="GameModel\IPlaceableEntity.cs" />
     <Compile Include="GameModel\IPlacementStrategy.cs" />
