--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -180,6 +180,10 @@
     <Compile Include="GameModel\IPlacementStrategy.cs" />
     <Compile Include="GameModel\IPlayingArea.cs" />
     <Compile Include="Common\Entities\IUpdateableEntity.cs" />
+    <Compile Include="GameModel\Matchmaking\GameMatchmaker.cs" />
+    <Compile Include="GameModel\Matchmaking\GameMatchmakingOffer.cs" />
+    <Compile Include="GameModel\Matchmaking\GameMatchmakingRequest.cs" />
+    <Compile Include="GameModel\Matchmaking\GameMatchmakingResource.cs" />
     <Compile Include="GameModel\Messages\EntityDestructionMessage.cs" />
     <Compile Include="GameModel\PlayingArea.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
