--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -180,10 +180,10 @@
     <Compile Include="GameModel\IPlacementStrategy.cs" />
     <Compile Include="GameModel\IPlayingArea.cs" />
     <Compile Include="Common\Entities\IUpdateableEntity.cs" />
-    <Compile Include="GameModel\Matchmaking\GameMatchmaker.cs" />
-    <Compile Include="GameModel\Matchmaking\GameMatchmakingOffer.cs" />
-    <Compile Include="GameModel\Matchmaking\GameMatchmakingRequest.cs" />
-    <Compile Include="GameModel\Matchmaking\GameResource.cs" />
+    <Compile Include="GameModel\Matchmaking\ResourceMatchmaker.cs" />
+    <Compile Include="GameModel\Matchmaking\ResourceOffer.cs" />
+    <Compile Include="GameModel\Matchmaking\ResourceRequest.cs" />
+    <Compile Include="GameModel\Matchmaking\Resource.cs" />
     <Compile Include="GameModel\Messages\EntityDestructionMessage.cs" />
     <Compile Include="GameModel\PlayingArea.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
