Switched to using static typing for matchmaking sources.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Common\Communication\MessageSystem.cs" />
     <Compile Include="Common\Entities\EntityLoader.cs" />
     <Compile Include="Common\Entities\ICompositeEntity.cs" />
+    <Compile Include="Common\Matchmaking\IMatchmakingEntity.cs" />
     <Compile Include="Common\Matchmaking\IMatchmakingRequest.cs" />
     <Compile Include="Common\Matchmaking\Matchmaker.cs" />
     <Compile Include="Common\Matchmaking\MatchmakingEdge.cs" />
