Started work on multi-entity placement (e.g. for road segments).

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -229,6 +229,7 @@
     <Compile Include="UI\PlayingAreaViewer.cs" />
     <Compile Include="UI\SidebarViewer.cs" />
     <Compile Include="UI\GameView.cs" />
+    <Compile Include="UI\Tools\MultiEntityPlacementTool.cs" />
     <Compile Include="UI\Tools\ToolUtil.cs" />
     <Compile Include="UI\ViewHierarchy.cs" />
     <Compile Include="UI\VisibleEntity.cs" />
