Did some reorganisation.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -176,22 +176,22 @@
     <Compile Include="Common\Matchmaking\MatchmakingEdge.cs" />
     <Compile Include="Common\Matchmaking\MatchmakingGraph.cs" />
     <Compile Include="GameModel\FSMs\EntityInDestructionState.cs" />
-    <Compile Include="GameModel\IPlaceableEntity.cs" />
-    <Compile Include="GameModel\IPlacementStrategy.cs" />
-    <Compile Include="GameModel\IPlayingArea.cs" />
+    <Compile Include="GameModel\Entities\IPlaceableEntity.cs" />
+    <Compile Include="GameModel\Placement\IPlacementStrategy.cs" />
+    <Compile Include="GameModel\Entities\IPlayingArea.cs" />
     <Compile Include="Common\Entities\IUpdateableEntity.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceMatchmaker.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceOffer.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceRequest.cs" />
     <Compile Include="GameModel\Matchmaking\Resource.cs" />
     <Compile Include="GameModel\Messages\EntityDestructionMessage.cs" />
-    <Compile Include="GameModel\PlayingArea.cs" />
+    <Compile Include="GameModel\Entities\PlayingArea.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
-    <Compile Include="GameModel\PlacementStrategyBase.cs" />
-    <Compile Include="GameModel\PlacementStrategyRequireFlatGround.cs" />
-    <Compile Include="GameModel\Building.cs" />
-    <Compile Include="GameModel\City.cs" />
-    <Compile Include="GameModel\World.cs" />
+    <Compile Include="GameModel\Placement\PlacementStrategyBase.cs" />
+    <Compile Include="GameModel\Placement\PlacementStrategyRequireFlatGround.cs" />
+    <Compile Include="GameModel\Entities\Building.cs" />
+    <Compile Include="GameModel\Entities\City.cs" />
+    <Compile Include="GameModel\Entities\World.cs" />
     <Compile Include="GameModel\Blueprints\CityBlueprint.cs" />
     <Compile Include="GameModel\FSMs\EntityInConstructionState.cs" />
     <Compile Include="GameModel\FSMs\EntityOperatingState.cs" />
@@ -215,9 +215,9 @@
     <Compile Include="Common\Maths\Constants.cs" />
     <Compile Include="Common\Maths\Triangle.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
-    <Compile Include="GameModel\House.cs" />
+    <Compile Include="GameModel\Entities\House.cs" />
     <Compile Include="GameModel\Blueprints\HouseBlueprint.cs" />
-    <Compile Include="GameModel\RoadSegment.cs" />
+    <Compile Include="GameModel\Entities\RoadSegment.cs" />
     <Compile Include="GameModel\Terrains\QuadtreeCompiler.cs" />
     <Compile Include="GameModel\Terrains\QuadtreeNode.cs" />
     <Compile Include="GameModel\Terrains\Terrain.cs" />
