--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -220,9 +220,9 @@
     <Compile Include="GameModel\Entities\House.cs" />
     <Compile Include="GameModel\Blueprints\HouseBlueprint.cs" />
     <Compile Include="GameModel\Entities\RoadSegment.cs" />
-    <Compile Include="GameModel\Terrains\QuadtreeCompiler.cs" />
-    <Compile Include="GameModel\Terrains\QuadtreeNode.cs" />
-    <Compile Include="GameModel\Terrains\Terrain.cs" />
+    <Compile Include="Common\Terrains\QuadtreeCompiler.cs" />
+    <Compile Include="Common\Terrains\QuadtreeNode.cs" />
+    <Compile Include="Common\Terrains\Terrain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
