--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -175,10 +175,10 @@
     <Compile Include="Common\Matchmaking\Matchmaker.cs" />
     <Compile Include="Common\Matchmaking\MatchmakingEdge.cs" />
     <Compile Include="Common\Matchmaking\MatchmakingGraph.cs" />
-    <Compile Include="GameModel\Entities\PlaceableEntity.cs" />
+    <Compile Include="GameModel\Placement\PlaceableEntity.cs" />
     <Compile Include="GameModel\FSMs\EntityInDestructionState.cs" />
-    <Compile Include="GameModel\Entities\IPlaceableEntity.cs" />
-    <Compile Include="GameModel\Entities\OccupancyMap.cs" />
+    <Compile Include="GameModel\Placement\IPlaceableEntity.cs" />
+    <Compile Include="GameModel\Placement\OccupancyMap.cs" />
     <Compile Include="GameModel\Placement\IPlacementStrategy.cs" />
     <Compile Include="GameModel\Entities\IPlayingArea.cs" />
     <Compile Include="Common\Entities\IUpdateableEntity.cs" />
