--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -205,7 +205,7 @@
     <Compile Include="Common\FSMs\IFSMState.cs" />
     <Compile Include="GameModel\FSMs\EntityStateID.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
-    <Compile Include="GameModel\Blueprints\Blueprint.cs" />
+    <Compile Include="GameModel\Blueprints\PlaceableEntityBlueprint.cs" />
     <Compile Include="GameModel\FSMs\EntityFSM.cs" />
     <Compile Include="GameModel\Blueprints\Footprint.cs" />
     <Compile Include="UI\Button.cs" />
