--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -178,7 +178,7 @@
     <Compile Include="GameModel\Blueprints\Blueprint.cs" />
     <Compile Include="GameModel\Entities\EntityUtil.cs" />
     <Compile Include="GameModel\Entities\PlaceableEntity.cs" />
-    <Compile Include="GameModel\FSMs\EntityInDestructionState.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityInDestructionState.cs" />
     <Compile Include="GameModel\Entities\IPlaceableEntity.cs" />
     <Compile Include="GameModel\Entities\OccupancyMap.cs" />
     <Compile Include="GameModel\Entities\IPlacementStrategy.cs" />
@@ -196,18 +196,18 @@
     <Compile Include="GameModel\Entities\City.cs" />
     <Compile Include="GameModel\Entities\World.cs" />
     <Compile Include="GameModel\Blueprints\CityBlueprint.cs" />
-    <Compile Include="GameModel\FSMs\EntityInConstructionState.cs" />
-    <Compile Include="GameModel\FSMs\EntityOperatingState.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityInConstructionState.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityOperatingState.cs" />
     <Compile Include="UI\GameViewState.cs" />
     <Compile Include="UI\Tools\EntityDeletionTool.cs" />
     <Compile Include="UI\Tools\EntityPlacementTool.cs" />
     <Compile Include="UI\Tools\ITool.cs" />
     <Compile Include="Common\FSMs\FiniteStateMachine.cs" />
     <Compile Include="Common\FSMs\IFSMState.cs" />
-    <Compile Include="GameModel\FSMs\EntityStateID.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityStateID.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
     <Compile Include="GameModel\Blueprints\PlaceableEntityBlueprint.cs" />
-    <Compile Include="GameModel\FSMs\EntityFSM.cs" />
+    <Compile Include="GameModel\FSMs\PlaceableEntityFSM.cs" />
     <Compile Include="GameModel\Blueprints\Footprint.cs" />
     <Compile Include="UI\Button.cs" />
     <Compile Include="UI\CompositeVisibleEntity.cs" />
