--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -181,6 +181,7 @@
     <Compile Include="GameModel\Entities\EntityUtil.cs" />
     <Compile Include="GameModel\Entities\IMobileEntity.cs" />
     <Compile Include="GameModel\Entities\IMovementStrategy.cs" />
+    <Compile Include="GameModel\Entities\MovementStrategyGoToPosition.cs" />
     <Compile Include="GameModel\Entities\PlaceableEntity.cs" />
     <Compile Include="GameModel\Entities\Walker.cs" />
     <Compile Include="GameModel\FSMs\PlaceableEntityInDestructionState.cs" />
