Renamed EntityLoader to EntityPersister, and started working on saving worlds to XML.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,12 +164,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Entities\IPersistableEntity.cs" />
     <Compile Include="Common\Maths\Orientation8.cs" />
     <Compile Include="Common\Messages\IMessage.cs" />
     <Compile Include="Common\Messages\MessageRule.cs" />
     <Compile Include="Common\Messages\MessageRuleFactory.cs" />
     <Compile Include="Common\Messages\MessageSystem.cs" />
-    <Compile Include="Common\Entities\EntityLoader.cs" />
+    <Compile Include="Common\Entities\EntityPersister.cs" />
     <Compile Include="Common\Entities\ICompositeEntity.cs" />
     <Compile Include="Common\Matchmaking\IMatchmakingEntity.cs" />
     <Compile Include="Common\Matchmaking\IMatchmakingRequest.cs" />
