Introduced the EntityLifetimeManager class to properly manage entity destruction.

--- a/game1666proto4/game1666proto4Test/game1666proto4Test.csproj
+++ b/game1666proto4/game1666proto4Test/game1666proto4Test.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ADTs\PriorityQueueTest.cs" />
+    <Compile Include="GameModel\Entities\EntityLifetimeManagerTest.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceMatchmakerTest.cs" />
     <Compile Include="Common\Matchmaking\MatchmakingGraphTest.cs" />
     <Compile Include="Common\Maths\TriangleTest.cs" />
