--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Common\AStar\AStarNode.cs" />
     <Compile Include="Common\Entities\IPersistableEntity.cs" />
     <Compile Include="Common\Maths\Orientation8.cs" />
+    <Compile Include="Common\Messages\EntitySpawnMessage.cs" />
     <Compile Include="Common\Messages\EntityPreDestructionMessage.cs" />
     <Compile Include="Common\Messages\IMessage.cs" />
     <Compile Include="Common\Messages\MessageRule.cs" />
