Renamed EntityLifetimeManager to EntityDestructionManager to better reflect its purpose.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -186,7 +186,7 @@
     <Compile Include="GameModel\Blueprints\Blueprint.cs" />
     <Compile Include="GameModel\Blueprints\MobileEntityBlueprint.cs" />
     <Compile Include="GameModel\Blueprints\SpawnerBlueprint.cs" />
-    <Compile Include="GameModel\Entities\EntityLifetimeManager.cs" />
+    <Compile Include="GameModel\Entities\EntityDestructionManager.cs" />
     <Compile Include="GameModel\Entities\EntityNavigationMap.cs" />
     <Compile Include="GameModel\Entities\EntityUtil.cs" />
     <Compile Include="GameModel\Entities\IMobileEntity.cs" />
