--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -169,8 +169,8 @@
     <Compile Include="Common\AStar\AStarNode.cs" />
     <Compile Include="Common\Entities\IPersistableEntity.cs" />
     <Compile Include="Common\Maths\Orientation8.cs" />
-    <Compile Include="Common\Messages\EntitySpawnMessage.cs" />
-    <Compile Include="Common\Messages\EntityPreDestructionMessage.cs" />
+    <Compile Include="GameModel\Messages\EntitySpawnMessage.cs" />
+    <Compile Include="GameModel\Messages\EntityPreDestructionMessage.cs" />
     <Compile Include="Common\Messages\IMessage.cs" />
     <Compile Include="Common\Messages\MessageRule.cs" />
     <Compile Include="Common\Messages\MessageFilterFactory.cs" />
@@ -206,7 +206,7 @@
     <Compile Include="GameModel\Matchmaking\ResourceOffer.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceRequest.cs" />
     <Compile Include="GameModel\Matchmaking\Resource.cs" />
-    <Compile Include="Common\Messages\EntityDestructionMessage.cs" />
+    <Compile Include="GameModel\Messages\EntityDestructionMessage.cs" />
     <Compile Include="GameModel\Entities\PlayingArea.cs" />
     <Compile Include="GameModel\Entities\EntityNavigationNode.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
