Started getting entity name trees working.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Common\ADTs\PriorityQueue.cs" />
     <Compile Include="Common\AStar\AStarSearcher.cs" />
     <Compile Include="Common\AStar\AStarNode.cs" />
+    <Compile Include="Common\Entities\INamedEntity.cs" />
     <Compile Include="Common\Entities\IPersistableEntity.cs" />
     <Compile Include="Common\Maths\Orientation8.cs" />
     <Compile Include="GameModel\Messages\EntitySpawnMessage.cs" />
