Reorganised the GameModel.Entities directory.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -170,9 +170,10 @@
     <Compile Include="Common\Entities\INamedEntity.cs" />
     <Compile Include="Common\Entities\IPersistableEntity.cs" />
     <Compile Include="Common\Maths\Orientation8.cs" />
-    <Compile Include="GameModel\Entities\MovementStrategyFollowPath.cs" />
-    <Compile Include="GameModel\Entities\MovementStrategyGoToBase.cs" />
-    <Compile Include="GameModel\Entities\MovementStrategyGoToPlaceable.cs" />
+    <Compile Include="GameModel\Entities\Core\IRoadSegment.cs" />
+    <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyFollowPath.cs" />
+    <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyGoToBase.cs" />
+    <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyGoToPlaceable.cs" />
     <Compile Include="Common\Messages\EntitySpawnMessage.cs" />
     <Compile Include="Common\Messages\EntityPreDestructionMessage.cs" />
     <Compile Include="Common\Messages\IMessage.cs" />
@@ -191,33 +192,33 @@
     <Compile Include="GameModel\Blueprints\MobileEntityBlueprint.cs" />
     <Compile Include="GameModel\Blueprints\SpawnerBlueprint.cs" />
     <Compile Include="Common\Entities\EntityDestructionManager.cs" />
-    <Compile Include="GameModel\Entities\EntityNavigationMap.cs" />
-    <Compile Include="GameModel\Entities\EntityUtil.cs" />
-    <Compile Include="GameModel\Entities\IMobileEntity.cs" />
-    <Compile Include="GameModel\Entities\IMovementStrategy.cs" />
-    <Compile Include="GameModel\Entities\MovementStrategyGoToPosition.cs" />
-    <Compile Include="GameModel\Entities\PlaceableEntity.cs" />
-    <Compile Include="GameModel\Entities\Spawner.cs" />
-    <Compile Include="GameModel\Entities\Walker.cs" />
+    <Compile Include="GameModel\Entities\Core\EntityNavigationMap.cs" />
+    <Compile Include="GameModel\Entities\Core\EntityUtil.cs" />
+    <Compile Include="GameModel\Entities\Core\IMobileEntity.cs" />
+    <Compile Include="GameModel\Entities\Core\IMovementStrategy.cs" />
+    <Compile Include="GameModel\Entities\MovementStrategies\MovementStrategyGoToPosition.cs" />
+    <Compile Include="GameModel\Entities\Core\PlaceableEntity.cs" />
+    <Compile Include="GameModel\Entities\Custom\Spawner.cs" />
+    <Compile Include="GameModel\Entities\Custom\Walker.cs" />
     <Compile Include="GameModel\FSMs\PlaceableEntityInDestructionState.cs" />
-    <Compile Include="GameModel\Entities\IPlaceableEntity.cs" />
+    <Compile Include="GameModel\Entities\Core\IPlaceableEntity.cs" />
     <Compile Include="GameModel\Navigation\INavigationNode.cs" />
     <Compile Include="GameModel\Navigation\NavigationMap.cs" />
-    <Compile Include="GameModel\Entities\IPlacementStrategy.cs" />
-    <Compile Include="GameModel\Entities\IPlayingArea.cs" />
+    <Compile Include="GameModel\Entities\Core\IPlacementStrategy.cs" />
+    <Compile Include="GameModel\Entities\Core\IPlayingArea.cs" />
     <Compile Include="Common\Entities\IUpdateableEntity.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceMatchmaker.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceOffer.cs" />
     <Compile Include="GameModel\Matchmaking\ResourceRequest.cs" />
     <Compile Include="GameModel\Matchmaking\Resource.cs" />
     <Compile Include="Common\Messages\EntityDestructionMessage.cs" />
-    <Compile Include="GameModel\Entities\PlayingArea.cs" />
-    <Compile Include="GameModel\Entities\EntityNavigationNode.cs" />
+    <Compile Include="GameModel\Entities\Core\PlayingArea.cs" />
+    <Compile Include="GameModel\Entities\Core\EntityNavigationNode.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
-    <Compile Include="GameModel\Entities\PlacementStrategyRequireFlatGround.cs" />
-    <Compile Include="GameModel\Entities\Building.cs" />
-    <Compile Include="GameModel\Entities\City.cs" />
-    <Compile Include="GameModel\Entities\World.cs" />
+    <Compile Include="GameModel\Entities\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
+    <Compile Include="GameModel\Entities\Custom\Building.cs" />
+    <Compile Include="GameModel\Entities\Custom\City.cs" />
+    <Compile Include="GameModel\Entities\Custom\World.cs" />
     <Compile Include="GameModel\FSMs\PlaceableEntityInConstructionState.cs" />
     <Compile Include="GameModel\FSMs\PlaceableEntityOperatingState.cs" />
     <Compile Include="UI\GameViewState.cs" />
@@ -239,9 +240,9 @@
     <Compile Include="Common\Maths\Constants.cs" />
     <Compile Include="Common\Maths\Triangle.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
-    <Compile Include="GameModel\Entities\House.cs" />
+    <Compile Include="GameModel\Entities\Custom\House.cs" />
     <Compile Include="GameModel\Blueprints\HouseBlueprint.cs" />
-    <Compile Include="GameModel\Entities\RoadSegment.cs" />
+    <Compile Include="GameModel\Entities\Custom\RoadSegment.cs" />
     <Compile Include="Common\Terrains\QuadtreeCompiler.cs" />
     <Compile Include="Common\Terrains\QuadtreeNode.cs" />
     <Compile Include="Common\Terrains\Terrain.cs" />
